# sources

./: .gitignore  README.md  index.json  index.min.json
.github/workflows/: build.yaml  check-domain.yaml
check-domains/: deno.json  domain-alive.ts  domain-redirect.ts  main.ts
public/: index.html
res/: filters.json  source.json
sources/: ar.promanga-v1.aix  en.aquamanga-v1.aix  en.aquamanga-v2.aix  en.armageddon-v1.aix  en.armageddon-v2.aix  en.armageddon-v3.aix  en.armageddon-v4.aix  en.armageddon-v5.aix  en.asurascans-v10.aix  en.asurascans-v11.aix  en.asurascans-v12.aix  en.asurascans-v13.aix  en.asurascans-v14.aix  en.asurascans-v17.aix  en.asurascans-v18.aix  en.athreascans-v1.aix  en.aurorascans-v1.aix  en.batcave-v1.aix  en.comix-v13.aix  en.comix-v2.aix  en.comix-v22.aix  en.comix-v4.aix  en.comix-v5.aix  en.comix-v6.aix  en.comix-v7.aix  en.comix-v8.aix  en.dankefurslesen-v3.aix  en.drakescans-v1.aix  en.elftoon-v1.aix  en.elftoon-v2.aix  en.ezmanga-v1.aix  en.firescans-v2.aix  en.flamecomics-v3.aix  en.flamecomics-v4.aix  en.freewebnovel-v3.aix  en.guya-v2.aix  en.hivescans-v1.aix  en.madokami-v1.aix  en.magusmanga-v1.aix  en.mangabat-v6.aix  (+219 more)
sources/ar.promanga/res/: source.json
sources/ar.promanga/src/: lib.rs
sources/en.aquamanga/: Cargo.toml
sources/en.aquamanga/res/: filters.json  source.json
sources/en.aquamanga/src/: lib.rs
sources/en.aquareader/: Cargo.toml
sources/en.aquareader/res/: filters.json  source.json
sources/en.aquareader/src/: lib.rs
sources/en.asurascans/res/: source.json
sources/en.asurascans/src/: lib.rs
sources/en.athreascans/res/: source.json
sources/en.athreascans/src/: lib.rs
sources/en.batcave/: Cargo.toml
sources/en.batcave/res/: filters.json  source.json
sources/en.batcave/src/: home.rs  lib.rs
sources/en.comix/: Cargo.toml
sources/en.comix/res/: filters.json  settings.json  source.json
sources/en.comix/src/: helpers.rs  home.rs  images.rs  lib.rs  model.rs  models.rs  settings.rs  web.rs
sources/en.dankefurslesen/: Cargo.toml
sources/en.dankefurslesen/res/: filters.json  source.json
sources/en.dankefurslesen/src/: lib.rs
sources/en.dankemoe/: Cargo.toml
sources/en.dankemoe/res/: filters.json  source.json
sources/en.dankemoe/src/: helpers.rs  lib.rs  models.rs
sources/en.ezmanga/: Cargo.toml
sources/en.ezmanga/res/: source.json
sources/en.flamecomics/: Cargo.toml
sources/en.freewebnovel/: Cargo.toml
sources/en.kagane/: Cargo.toml
sources/en.kagane/res/: filters.json  settings.json  source.json
sources/en.kagane/src/: filters.rs  helpers.rs  lib.rs  models.rs  settings.rs  wvd.rs
sources/en.mangadotnet/: Cargo.toml
sources/en.mangapark/: Cargo.toml  README.md
sources/en.scansgg/: Cargo.toml
sources/en.tcbscans/: Cargo.toml
sources/es.manhwaweb/: Cargo.toml
sources/es.manhwaweb/res/: filters.json  source.json
sources/es.manhwaweb/src/: helper.rs  helpers.rs  imp.rs  lib.rs  models.rs
sources/ezmanga.org/: Cargo.toml
sources/fr.bigsolo/: Cargo.toml
sources/fr.fmteamfr/: Cargo.toml
sources/ja.mangamura/: Cargo.toml
sources/ja.rawotaku/: Cargo.toml
sources/multi.bakamh/: Cargo.toml
sources/multi.grabberzone/: Cargo.toml
sources/multi.mangadotnet/: Cargo.toml
sources/pt.hqnow/: Cargo.toml
sources/ru.desu/: Cargo.toml  README.md
sources/vi.cuutruyen/: Cargo.toml
sources/vi.hakovn/: Cargo.toml
sources/vi.minotruyen/: Cargo.toml
sources/vi.minotruyen/res/: filters.json  settings.json  source.json
sources/vi.minotruyen/src/: crypto.rs  drm_tool.rs  env.rs  lib.rs  models.rs  utils.rs
sources/vi.nettruyen/: Cargo.toml
sources/zh.boylove/: Cargo.toml
sources/zh.boylove/res/: settings.json  source.json
sources/zh.boylove/src/: lib.rs  setting.rs
sources/zh.boylove/src/html/: mod.rs  test.rs
sources/zh.boylove/src/json/: mod.rs
sources/zh.boylove/src/json/chapter_list/: mod.rs  test.rs
sources/zh.boylove/src/json/manga_page_result/: mod.rs  test.rs
sources/zh.boylove/src/net/: mod.rs  test.rs
sources/zh.copymanga/: Cargo.toml
sources/zh.copymanga/res/: source.json
sources/zh.copymanga/src/: lib.rs
sources/zh.copymanga/src/html/: mod.rs  test.rs
sources/zh.copymanga/src/json/: mod.rs  page_list.rs
sources/zh.copymanga/src/json/chapter_list/: mod.rs
sources/zh.copymanga/src/net/: mod.rs  test.rs
sources/zh.rumanhua/: Cargo.toml
sources/zh.zerobyw/: Cargo.toml
src/: helpers.rs  home.rs  lib.rs  models.rs  net.rs  settings.rs
templates/guya/: Cargo.toml
templates/libgroup/: Cargo.toml
templates/pizzareader/: Cargo.toml
templates/wpcomics/: Cargo.toml
(+236 files in other folders)
